dmapi-2.0.3 (12 June 2002)
	- kernel-library interface has changed, now 64bit safe.

dmapi-2.0.2 (13 April 2002)
	- Minor build system updates

dmapi-2.0.0 (07 February 2002)
	- Major release to coincide with switch to new extended
	  attributes system call interfaces

dmapi-0.3.0 (04 December 2001)
	- The kernel-side of dmapi is now a module, and the device has
	  moved.  Change dmapi to use the dmapi device in its new
	  location of /proc/fs/xfs_dmapi.

dmapi-0.2.2 (27 July 2001)
	- fixes for (hopefully) the last few nits in libtool usage

dmapi-0.2.1 (23 July 2001)
	- install static libs and libtool archives into /usr/lib
	- shared libraries are unchanged, however

dmapi-0.2.0 (19 July 2001)
	- reworked Makefiles use of libtool slightly
	- rework some of the Debian packaging rules
	- libdm is now installed into /lib instead of /usr/lib
	  as it is needed by xfsdump and xfsrestore which must
	  be available for recovery when only root is mounted

dmapi-0.1.2 (18 July 2001)
	- change dmapi to use /proc instead of /dev/dmapi

dmapi-0.1.1 (30 January 2001)
        - minor rpm and deb packaging work

dmapi-0.1.0 (15 January 2001)
	- initial version of package
	- early alpha code
