@@ -35,7 +35,7 @@ include $(TOPDIR)/include/builddefs
 
 LTLIBRARY = libdm.la
 LT_CURRENT = 0
-LT_REVISION = 3
+LT_REVISION = 4
 LT_AGE = 0
 
 HFILES = dmapi_lib.h
