@@ -1,3 +1,6 @@
+dmapi-2.0.4 (18 June 2002)
+	- kernel<>library interface for DM_OPEN_BY_HANDLE changed
+
 dmapi-2.0.3 (12 June 2002)
 	- kernel-library interface has changed, now 64bit safe.
 
